--- a/TermProject/TermProjectFXMLMain.fxml
+++ b/TermProject/TermProjectFXMLMain.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="AnchorMain" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="termproject.TermProjectFXMLController">
+<AnchorPane id="AnchorPane" fx:id="AnchorMain" prefHeight="1082.0" prefWidth="1722.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="termproject.TermProjectFXMLController">
    <children>
       <Rectangle fx:id="ControlsRec" arcHeight="5.0" arcWidth="5.0" fill="#d4d4d4" height="50.0" layoutX="-1.0" layoutY="510.0" stroke="#d4d4d4" strokeType="INSIDE" width="349.0" />
       <Rectangle fx:id="ParamRec" arcHeight="5.0" arcWidth="5.0" fill="#d4d4d4" height="141.0" layoutY="27.0" stroke="#d4d4d4" strokeType="INSIDE" width="349.0" />
@@ -24,17 +24,17 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem fx:id="MenuFileClose" mnemonicParsing="false" onAction="#handleMenuFileClose" text="Close" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+              <MenuItem fx:id="MenuEditTheme" mnemonicParsing="false" onAction="#handleMenuEditTheme" text="Theme" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="User Manual" />
+              <MenuItem fx:id="MenuHelpManual" mnemonicParsing="false" onAction="#handleMenuHelpManual" text="User Manual" />
             </items>
           </Menu>
         </menus>
@@ -46,7 +46,7 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <Rectangle fx:id="VVeclocityRec1" arcHeight="5.0" arcWidth="5.0" fill="#1c8cec" height="50.0" layoutX="32.0" layoutY="275.0" smooth="false" stroke="#1c8cec" strokeType="INSIDE" width="142.0" />
+      <Rectangle fx:id="VVelocityRec" arcHeight="5.0" arcWidth="5.0" fill="#1c8cec" height="50.0" layoutX="32.0" layoutY="275.0" smooth="false" stroke="#1c8cec" strokeType="INSIDE" width="142.0" />
       <TextField fx:id="VVelocityField1" layoutX="173.0" layoutY="275.0" onAction="#setVerticalVelocity" prefHeight="50.0" prefWidth="101.0">
          <font>
             <Font size="15.0" />
@@ -57,7 +57,7 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <Rectangle fx:id="HVeclocityRec" arcHeight="5.0" arcWidth="5.0" fill="#1c8cec" height="50.0" layoutX="33.0" layoutY="189.0" smooth="false" stroke="#1c8cec" strokeType="INSIDE" width="142.0" />
+      <Rectangle fx:id="HVelocityRec" arcHeight="5.0" arcWidth="5.0" fill="#1c8cec" height="50.0" layoutX="33.0" layoutY="189.0" smooth="false" stroke="#1c8cec" strokeType="INSIDE" width="142.0" />
       <TextField fx:id="HVelocityField" layoutX="175.0" layoutY="189.0" onAction="#setHorizontalVelocity" prefHeight="50.0" prefWidth="101.0">
          <font>
             <Font size="15.0" />
@@ -135,7 +135,7 @@
       </Polyline>
       <Polyline fx:id="ResetShape" fill="BLACK" layoutX="211.0" layoutY="813.0" points="-50.0, -40.0, 50.0, -40.0, 0.0, 60.0, -50.0, -40.0" rotate="90.0" scaleX="0.4" scaleY="0.4" strokeType="INSIDE" />
       <Line fx:id="OrthogonalToLeftLine3" endX="1815.3333740234375" endY="-6.103515625E-5" layoutX="114.0" layoutY="894.0" startX="-115.0" startY="-7.62939453125E-6" />
-      <Rectangle fx:id="BotLeftRec" arcHeight="5.0" arcWidth="5.0" fill="#d4d4d4" height="185.0" layoutX="-1.0" layoutY="895.0" stroke="#d4d4d4" strokeType="INSIDE" width="349.0" />
+      <Rectangle fx:id="BotLeftRec" arcHeight="5.0" arcWidth="5.0" fill="#d4d4d4" height="187.0" layoutX="-1.0" layoutY="895.0" stroke="#d4d4d4" strokeType="INSIDE" width="349.0" />
       <Rectangle fx:id="VerticalDisRec" arcHeight="5.0" arcWidth="5.0" fill="#949494" height="50.0" layoutX="429.0" layoutY="904.0" smooth="false" stroke="#949494" strokeType="INSIDE" width="181.0" />
       <Label fx:id="VerticalDisReading" alignment="CENTER" layoutX="348.0" layoutY="994.0" prefHeight="57.0" prefWidth="331.0" text="0.0">
          <font>
@@ -156,7 +156,7 @@
       <Rectangle fx:id="GraphShape1" arcHeight="5.0" arcWidth="5.0" height="9.0" layoutX="1495.0" layoutY="999.0" rotate="135.0" stroke="BLACK" strokeType="INSIDE" width="50.0" />
       <Rectangle fx:id="GraphShape2" arcHeight="5.0" arcWidth="5.0" height="9.0" layoutX="1526.0" layoutY="967.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" width="50.0" />
       <Rectangle fx:id="GraphShape3" arcHeight="5.0" arcWidth="5.0" height="9.0" layoutX="1526.0" layoutY="999.0" rotate="135.0" stroke="BLACK" strokeType="INSIDE" width="50.0" />
-      <Rectangle fx:id="BotRightRec" arcHeight="5.0" arcWidth="5.0" fill="#d4d4d4" height="185.0" layoutX="1581.0" layoutY="895.0" stroke="#d4d4d4" strokeType="INSIDE" width="349.0" />
+      <Rectangle fx:id="BotRightRec" arcHeight="5.0" arcWidth="5.0" fill="#d4d4d4" height="187.0" layoutX="1581.0" layoutY="895.0" stroke="#d4d4d4" strokeType="INSIDE" width="349.0" />
       <Line fx:id="VerticalLine3" endX="-33.333251953125" endY="-43.29290771484375" layoutX="1614.0" layoutY="938.0" startX="-33.33331298828125" startY="142.5" />
       <Button fx:id="EnterTimeBtn" layoutX="254.0" layoutY="727.0" mnemonicParsing="false" onAction="#handleEnterTimeBtn" prefHeight="50.0" prefWidth="84.0" text="Confirm" />
       <Pane fx:id="ScenePane" layoutX="349.0" layoutY="27.0" prefHeight="867.0" prefWidth="1581.0" style="-fx-background-color: WHITE; -fx-border-color: BLACK;" />
